js/src/tests/test262/built-ins/Error/prototype/stack/setter-non-writable-stack.js

























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];

  var err = new Ctor('msg');
  Object.defineProperty(err, 'stack', {
    value: 'original',
    writable: false,
    enumerable: false,
    configurable: true,
  });

  assert.throws(TypeError, function () {
    set.call(err, 'updated');
  }, Ctor.name + ': non-writable own "stack"');

  verifyProperty(err, 'stack', {
    value: 'original',
    writable: false,
    enumerable: false,
    configurable: true,
  });

  
  var frozen = new Ctor('msg');
  Object.defineProperty(frozen, 'stack', {
    value: 'frozen-original',
    writable: false,
    enumerable: false,
    configurable: false,
  });
  Object.preventExtensions(frozen);

  assert.throws(TypeError, function () {
    set.call(frozen, 'updated');
  }, Ctor.name + ': frozen with non-writable own "stack"');

  verifyProperty(frozen, 'stack', {
    value: 'frozen-original',
    writable: false,
    enumerable: false,
    configurable: false,
  });
}

reportCompare(0, 0);
